--- a/santet/index.html
+++ b/santet/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Santet Online v2</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- pastikan pathnya benar -->
 </head>
 <body>
     <div class="container">
         <h2>Alat Santet</h2>
+        <!-- Pastikan action mengarah ke process_form.php -->
         <form action="process_form.php" method="post">
             <label for="nama_korban">Nama Korban:</label>
             <input type="text" id="nama_korban" name="nama_korban" required>
